@startuml

title __YEARNTREE's Class Diagram__\n

  package  {
    package com.zpy.yearn.yearnTree {
      class YearnLabel {
          - labelStr : String
          + value()
          + setValue()
          + setFromString()
          + labelFactory()
      }
    }
  }
  

  package  {
    package com.zpy.yearn.yearnTree {
      class YearnLabelFactory {
          {static} + createLabel()
          + newLabel()
          + newLabel()
          + newLabelFromString()
          + newLabel()
      }
    }
  }
  

  package  {
    package com.zpy.yearn.yearnTree {
      class YearnTree {
          - label : Label
          - children : List<YearnTree>
          + getChildren()
          + getLabel()
          + setLabel()
          + setChildren()
          + children()
          + treeFactory()
          + getTag()
      }
    }
  }
  

  package  {
    package com.zpy.yearn.yearnTree {
      class YearnTreeFactory {
          {static} - logger : Logger
          {static} + createYearnTree()
          {static} + newLeaf()
          {static} + newTreeNode()
      }
    }
  }
  

  YearnLabel -up-|> Label
  YearnLabelFactory -up-|> LabelFactory
  YearnTree -up-|> Tree
  TreeIterator -up-|> Iterator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
